--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,20 @@
-h1{
-    color: blue;
-    background-color: yellow;
+#header{
+    padding: 20px;
+    background-color: #283747;
+    color: white;
+    overflow: hidden;
+}
+
+
+ul {
+   
+    font-size: 20px;
+}
+
+li {
+    list-style-type: none;
+    float:left;
+    padding: 20px;
+    margin-left: 20px;
+    text-decoration: underline;
 }
