--- a/src/app/circle/circle.component.css
+++ b/src/app/circle/circle.component.css
@@ -1,9 +1,29 @@
 .circle {
-    background-color: #5D6D7E ;
-    width: 300px;
-    height: 300px;
+    overflow: hidden;
     margin:20px;
     padding : 10px;
-    border-radius: 150px;
     float: left;
+}
+.image-item {
+    width: 200px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+    border-radius: 100px;
+    box-shadow: 5px 5px 10px rgb(208, 199, 199);
+    text-align: center;
+    background-color: white;
+}
+
+.circle img{
+    height: 80%;
+    width:80%; 
+}
+.title {
+    color: rgb(53, 55, 81);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 22px;
+    text-align: center;
+    width: 300px;
+    font-weight: bold;
 }
