--- a/src/app/circle/circle.component.html
+++ b/src/app/circle/circle.component.html
@@ -1,3 +1,5 @@
-<div class="circle">
-    
+<div class="circle" (click)="onItemSelect()">
+ <div class="image-item"><img src="http://localhost:8090/images/{{image}}"></div>
+ <div class="title">{{title}}</div>
+   
 </div>
